<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="137dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnGenerateQRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:onClick="btnGenerateQRCode_OnClick"
        android:text="Generate QR" />

    <Button
        android:id="@+id/btnScanQRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:onClick="btnScanQRCode_OnClick"
        android:text="Scan QR Code" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:onClick="btnHistoryQRCode_OnClick"
        android:text="View History" />

</RelativeLayout>